name:                   kuna
version:                0
license:                Apache-2.0
license-file:           LICENSE
author:                 Alois Cochard
maintainer:             alois.cochard@gmail.com
copyright:              Copyright (c) 2015 Alois Cochard
category:               Development
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Codec.JVM.ASM
    Codec.JVM.ASM.Code
    Codec.JVM.ASM.Code.CtrlFlow
    Codec.JVM.Attr
    Codec.JVM.Class
    Codec.JVM.Cond
    Codec.JVM.Const
    Codec.JVM.ConstPool
    Codec.JVM.Field
    Codec.JVM.Internal
    Codec.JVM.Method
    Codec.JVM.Opcode
    Codec.JVM.Types
    Kuna.Core
    Kuna.JCore
    Kuna.Mach
  build-depends:
      base                >= 4.6.0.1    && < 5
    , base16-bytestring   >= 0.1        && < 0.2
    , binary              >= 0.7        && < 0.8
    , bound               >= 1          && < 1.1
    , bytestring          >= 0.10       && < 0.11
    , containers          >= 0.5        && < 0.6
    , text                >= 1.2        && < 1.3
    , transformers        >= 0.4        && < 0.5

executable kcc-jvm
  main-is:              Main.hs
  build-depends:       
      base
    , binary
    , bytestring
    , kuna
  hs-source-dirs:       kcc-jvm
  ghc-options:          -Wall
  default-language:     Haskell2010
